fix flicker glitch

--- a/chrome/shrinking_pinned_tabs.css
+++ b/chrome/shrinking_pinned_tabs.css
@@ -21,3 +21,8 @@ See the above repository for updates as well as full license text. */
 .tab-label-container[pinned] {
   display: none;
 }
+
+/* Fixes flicker glitch. */
+#tabbrowser-tabs[positionpinnedtabs] > #tabbrowser-arrowscrollbox::part(scrollbox) {
+    padding-inline: unset !important;
+}
